# ROAM

./: CMakeLists.txt  README.md
shaders/: basic-fs.glsl  basic-vs.glsl
src/: binary_triangle_tree.c  binary_triangle_tree.h  heightmap.c  heightmap.h  main.cpp  terrain_patch.cpp  terrain_patch.hpp  util.h
src/gfx/: opengl_render.cpp  opengl_render.hpp  shader.cpp  shader.hpp  shaderpool.cpp  shaderpool.hpp  spline.hpp
src/gfx/camera/: camera.cpp  camera.hpp  first_person.cpp  first_person.hpp  lookat.cpp  lookat.hpp
src/math/: README.md  mat2x2.hpp  mat3x3.hpp  mat4x4.hpp  math.hpp  vec2.hpp  vec3.hpp  vec4.hpp
